src/objects/Old_Incentive_Plan__c.object
<CustomObject>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Incentive_Plan_Name__c</fullName>
        <label>Incentive Plan Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Position__c</fullName>
        <label>Position</label>
        <picklist>
            <picklistValues>
                <fullName>Advisor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Team Lead</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Supervisor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Director</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Old Incentive Plan</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>Plan-{00000}</displayFormat>
        <label>Old Incentive Plan Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Old Incentive Plans</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>